# hs-web-server

./: LICENSE  README.md  stack.yaml  web-server.cabal
src/: Main.hs
